--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
     "sass": "^1.89.0",
     "typescript": "^4.9.5",
+    "victory": "^37.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
