--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           git config user.email "actions@github.com"
 
           # Add Azure DevOps remote (use PAT for authentication)
-          git remote add azure "https://git:${{ secrets.AZURE_PAT }}@dev.azure.com/code-pulse/Code%20Pulse/_git/CodePulse_Frontend"
+          git remote add azure "https://INT.Nimeth@CreativeSoftware.com:${{ secrets.AZURE_PAT }}@dev.azure.com/code-pulse/Code%20Pulse/_git/CodePulse_Frontend"
 
           # Push GitHub main → Azure DevOps main
           git push azure main --force
